Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20431

nodemap_parse_range() leaks the parsed nidlist

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      if (!cfs_parse_nidlist(buf, strlen(buf), &nidlist)) {
              *netmask = cfs_nidmask_get_length(&nidlist);
              if (!*netmask)
                  // should add cfs_free_nidlist(&nidlist);
                  GOTO(out, rc = -EINVAL);
       

      found by commit-hunter-v1

            skoyama Sohei Koyama
            skoyama Sohei Koyama
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: