LU-20431 nodemap: fix nidlist leak in nodemap_parse_range()

When range_str is parsed as a nidmask, cfs_parse_nidlist() allocates
the nidlist on success.  If cfs_nidmask_get_length() then returns a
zero netmask length, the code jumped to out without releasing the
parsed nidlist, leaking it.  The adjacent error path for
cfs_nidmask_get_base_nidstr() already frees it correctly.

Free the parsed nidlist before bailing out on a zero netmask length.

Fixes: 8f6988be4416 ("LU-14288 nodemap: Use nidmasks for IPv6 NIDs")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I06467ed119338785720d3aeec216a00ae7159e84
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66933
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>